--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@
 }
 
 body {
+    margin-top: 15vh;
     font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: var(--heafoo-color);
-    max-width: 100%;
 }
 
 /*TOP PAGE*/
@@ -34,9 +34,11 @@ header {
     align-items: center;
     background-color: var(--heafoo-bg);
     box-shadow: 1px 5px 15px 5px rgba(0,0,0,0.25);
-    position: sticky;
     overflow: hidden;
-    z-index: 2;
+    position: fixed;
+    padding-top: 1em;
+    top: 0;
+    width: 100%;
 }
 
 h2 {
@@ -105,6 +107,7 @@ section.hero {
     align-items: center;
     background-image: repeating-linear-gradient(90deg, rgba(236, 13, 35,0.5) 0px, rgba(236, 13, 35,0.5) 30px,transparent 30px, transparent 60px),repeating-linear-gradient(0deg, rgba(236, 13, 35,0.5) 0px, rgba(236, 13, 35,0.5) 30px,transparent 30px, transparent 60px),linear-gradient(90deg, hsl(94,64%,92%),hsl(94,64%,92%));
     min-height: 30vh;
+    max-width: 100%;
 }
 
 /*New Foods*/
