--- a/style.css
+++ b/style.css
@@ -53,8 +53,7 @@ h2 {
 h3 {
     font-size: 2rem;
     text-align: center;
-    padding: .5rem;
-    margin-top: 2rem;
+    margin: 2rem 0.5rem;
     color: var(--text-color);
     text-shadow: 1px 1px 6px rgba(0,0,0,0.35);
 }
@@ -151,7 +150,7 @@ a {
 img {
     max-width: 100%;
     height: auto;
-    border-radius: 1em;
+    border-radius: 1rem;
 }
 
 /*HERO*/
@@ -170,7 +169,6 @@ section.hero {
 }
 
 img.ramen {
-    margin-top: -0.8rem;
     width: 3rem;
     height: auto;
 }
