--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: var(--main-bg);
+    width: 100%;
 }
 
 /*TEXT*/
