--- a/style.css
+++ b/style.css
@@ -151,6 +151,28 @@ img {
     border-radius: 1rem;
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 0.6rem;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #000000; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--card-color);
+    border-radius: 0.5rem;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #075035;
+  }
+
 /*HERO*/
 section.hero {
     display: flex;
