--- a/styles/index.css
+++ b/styles/index.css
@@ -1,26 +1,3 @@
-/*Body*/
-body {
-    font-family: 'Poppins', sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--main-bg);
-    width: 100%;
-}
-
-/*Links*/
-a {
-    text-decoration: none;
-    color: black;
-    transition: 250ms;
-}
-
-a:hover {
-    color: var(--card-color);
-    transition: 250ms;
-}
-
 /*HERO*/
 section.hero {
     display: flex;
@@ -33,6 +10,7 @@ section.hero {
     background-position: center;
     min-height: 80vh;
     width: 100%;
+    position: relative;
 }
 
 .hero-logo {
@@ -43,6 +21,27 @@ section.hero {
     max-width: 40%;
     position: relative;
     animation: push 3s infinite ease-in-out;
+}
+
+.custom-wave {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-wave svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 100px;
+}
+
+.custom-wave .shape-fill {
+    fill: #3E3636;
 }
 
 /*Hero Animation*/
@@ -60,12 +59,6 @@ img.ramen {
     height: auto;
 }
 
-img.food-thumbnail {
-    max-width: 100%;
-    height: auto;
-    border-radius: 1rem;
-}
-
 img.float-pasta {
     max-width: 70%;
     position: relative;
@@ -74,13 +67,26 @@ img.float-pasta {
 }
 
 /*Section layout*/
-section.new-foods, .blog, .about {
+section.new-foods {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     text-align: center;
     padding-bottom: 2em;
+}
+
+ .blog, .about {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 2em;
+}
+
+.blog {
+    display: none;
 }
 
 /*Card layout*/
@@ -102,41 +108,53 @@ section.new-foods, .blog, .about {
 }
 
 /*Card*/
-.food-card, .about-card, .latest-blog-card {
+
+.food-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    width: 90%;
+    height: 600px;
+    padding: 2rem 2rem 1rem 2rem;
+    border-radius: 1em;
+    text-align: center;
+    margin: 1rem 1rem;
+    box-shadow: 1px 5px 15px 5px rgba(0,0,0,0.25);
+    background-color: black;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+h5.food-heading {
+    visibility: hidden;
+}
+
+.food-card:first-of-type {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75)), url(../img/fetapasta.jpg);
+}
+
+.food-card:nth-of-type(2) {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75)), url(../img/keburulla.jpg);
+}
+
+.food-card:nth-of-type(3) {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75)), url(../img/mummonkurkut.jpg);
+}
+
+.about-card, .latest-blog-card {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: var(--card-color);
     width: 90%;
-    height: auto;
     padding: 2rem 2rem;
     border-radius: 1em;
     text-align: center;
     margin: 1rem 1rem;
     box-shadow: 1px 5px 15px 5px rgba(0,0,0,0.25);
     transition: 300ms ease-out;
-}
-
-/*buttons*/
-.card-button, .section-end-button  {
-    background-color: var(--heafoo-bg);
-    padding: 0.8rem 1.3rem;
-    border: 5px solid var(--heafoo-bg);
-    border-radius: 1.8rem;
-    color: var(--text-color);
-    font-weight: bold;
-    font-size: 1rem;
-    margin: 1rem;
-    box-shadow: 1px 5px 15px 5px rgba(0,0,0,0.25);
-    transition: 400ms;
-    cursor: pointer;
-}
-
-.card-button:hover, .section-end-button:hover {
-    background-color: var(--text-color);
-    color: var(--heafoo-bg);
-    transition: 600ms;
 }
 
 /*-------------------MEDIA QUERIES-------------------*/
@@ -155,14 +173,68 @@ section.new-foods, .blog, .about {
         flex-direction: row;
     }
 
-    .card-button, .section-end-button  {
-        padding: 0.8rem 1.3rem;
-        font-size: 1.2rem;
+    .food-card {
+        position: relative;
+        justify-content: center;
+        transition: 300ms ease-out;
+    }
+    
+
+    h5.food-heading {
+        visibility: visible;
+        color: var(--text-color);
+        background-color: var(--heafoo-bg);
+        padding: 0.5rem;
+        margin-bottom: 0;
+        border-radius: 0.6rem;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 1;
+        bottom: 0;
     }
 
-    .food-card:hover {
+    .food-card-inner {
+        visibility: hidden;
+        transition: 50ms ease-in-out;
+    }
+
+    .food-card:first-of-type {
+        background-image: url(../img/fetapasta.jpg);
+    }
+    
+    .food-card:nth-of-type(2) {
+        background-image: url(../img/keburulla.jpg);
+    }
+    
+    .food-card:nth-of-type(3) {
+        background-image: url(../img/mummonkurkut.jpg);
+    }
+
+    .food-card:first-of-type:hover {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75)), url(../img/fetapasta.jpg);
+    }
+
+    .food-card:nth-of-type(2):hover {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75)), url(../img/keburulla.jpg);
+    }
+
+    .food-card:nth-of-type(3):hover {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75)), url(../img/mummonkurkut.jpg);
+    }
+
+    .food-card:hover > h5.food-heading {
+       visibility: hidden;
+       transition: 10ms ease-in-out;
+    }
+
+    .food-card:hover > .food-card-inner {
+        visibility: visible;
+        transition: 500ms ease-in-out;
+     }
+
+    .food-card:hover, .about-card:hover {
         transform: scale(1.02);
-        transition: 500ms ease;
     }
 
     .hero-logo {
